# smithy-rs

aws/sdk/aws-s3-transfer-manager/: Cargo.toml
aws/sdk/aws-s3-transfer-manager/examples/: cp.rs
aws/sdk/aws-s3-transfer-manager/src/: discovery.rs  download.rs  error.rs  header.rs  lib.rs  object_meta.rs  types.rs
aws/sdk/benchmarks/s3-throughput/benchmark/: Cargo.toml
