[package]
name = "benchmark"
version = "0.1.0"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>", "John DiSanti <jdisanti@amazon.com>"]
description = "S3 benchmark"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/smithy-lang/smithy-rs"
publish = false

[dependencies]
aws-config = "1.1.10"
aws-sdk-s3 = "1.22.0"
aws-smithy-http = "0.60.7"
clap = { version = "4.3.2", default-features = false, features = ["derive", "std", "help"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1"
async-trait = "0.1.80"
hyper = { version = "0.14.28", features = ["client"] }
aws-smithy-types = "1.1.8"
